[package]
name = "kcn"
version = "0.0.1"
edition = "2021"
description = "KCN - A CLI tool to switch between built-in shadcn themes"
authors = ["KCN Theme Switcher"]
license = "MIT"
readme = "README.md"

[[bin]]
name = "kcn"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
crossterm = "0.27"
